--- a/src/bodyComponents/home/home.css
+++ b/src/bodyComponents/home/home.css
@@ -18,6 +18,7 @@
 .home_ps_caption{
     position: absolute !important; 
     right: 5% !important;
+    z-index: 8 !important;
 }
 
 
@@ -38,5 +39,51 @@
     position: absolute;
     bottom: 1%;
     right: 5%;
+}
+
+.carDiary{
+    width: 300 !important; 
+}
+
+.cardView{
+    height: 220px;
+    position: relative;
+}
+
+.cardTitle {
+    font-family: 'Poppins', sans-serif !important;
+    font-size: 14px !important;
+    font-weight: bold !important;
+    margin-top: 8px;
+    margin-left: 10px;
+}
+
+.cardTitle:hover{
+    text-decoration: none !important;
+    color: #62A431;
+}
+
+.titleLink:hover{
+    text-decoration: none !important;
+}
+
+.spanIcon{
+    position: absolute;
+    bottom: 5%;
+    right: 5%;
+}
+
+.spanIcon .ml-2{
+    color: #fff !important;
+    margin-right: 10%;
+}
+
+.mdbRow{
+    width: 80%;
+}
+
+.gutter-row{
+    margin-top: 5%;
+    margin-left: 5%;
 }
 
