--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,13 @@ code {
 
 .wrap {
   margin-top: 5% !important;
-  min-height: 500px;
+  min-height: 700px;
   padding: 0;
+}
+
+.ant-layout-footer{
+  padding:0px;
+  margin: 0px;
+  background: #000000;
+
 }
