--- a/src/bodyComponents/home/home.css
+++ b/src/bodyComponents/home/home.css
@@ -41,12 +41,8 @@
     right: 5%;
 }
 
-.carDiary{
-    width: 300 !important; 
-}
-
 .cardView{
-    height: 220px;
+    height: 200px;
     position: relative;
 }
 
@@ -71,19 +67,32 @@
     position: absolute;
     bottom: 5%;
     right: 5%;
+    color: white;
 }
 
 .spanIcon .ml-2{
     color: #fff !important;
-    margin-right: 10%;
+    margin-right: 10px;
 }
 
-.mdbRow{
-    width: 80%;
+.authorRecommend{
+    margin-right: 40%;
+    margin-top: 18%;
+    border: 1px solid black;
 }
 
 .gutter-row{
     margin-top: 5%;
     margin-left: 5%;
+}
+
+.diaryCards{
+    margin-left: 3%;
+}
+
+.moreDiaryButtonRow{
+    text-align: center;
+    margin-top: 3%;
+    margin-bottom: 3%;
 }
 
