--- a/src/bodyComponents/message/message.css
+++ b/src/bodyComponents/message/message.css
@@ -7,8 +7,13 @@
     text-align: right;
 }
 
-.chatDialogue{
+.chatDialogue {
     width: 60%;
-    border:1px solid red;
+    border: 1px solid red;
     margin:0 auto;
+}
+
+.chatHeader{
+    width:100%;
+    height:20px;
 }
